# interfejsy

./: CMakeLists.txt  DokumentacjaTechniczna.md  README.md  generate_masks.cpp
include/: Application.h  BlendMode.h  GUI.h  ImageProcessor.h  MaskLibrary.h
src/: Application.cpp  BlendMode.cpp  GUI.cpp  ImageProcessor.cpp  MaskLibrary.cpp  main.cpp
